--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
 
-    <div class="top">
+    <div class="topbar">
     <div class="streamixx">Streamixx</div>
+    <div class="top">
     <div class="navbar">
         <div class="home">Home</div>
         <div class="about">About</div>
         <div class="contact">Contact</div>
+    </div>
     </div>
     </div>
 </body>
