--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Streamixx</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="./LogoStreamMixx.png">
 </head>
 <body>
 
     <div class="topbar">
+    <div class="logo">
+    <a href="#" class="logosite">
+    <img src="LogoStreamMixx.png" alt="sitelogo" class="logosite">
     <div class="streamixx">Streamixx</div>
+    </a>
+    </div>
     <div class="top">
     <div class="navbar">
         <div class="home">Home</div>
