--- a/index.html
+++ b/index.html
@@ -25,5 +25,13 @@
     </div>
     </div>
     </div>
+
+    <div class="welcome">
+        Welcome to Streamixx
+    </div>
+
+    <div>
+        <img src="Wel.jpg" alt="Welcome">
+    </div>
 </body>
 </html>
