--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
     </div>
     </div>
 
+    <br><br><br><br>
+
+    <div class="welcomepage">
     <div class="welcome">
         Welcome to Streamixx
     </div>
-
-    <div>
-        <img src="Wel.jpg" alt="Welcome">
+    <div class="image">
     </div>
 </body>
 </html>
