--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Streamixx</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="./LogoStreamMixx.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
