--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
     </div>
     </div>
 
-    <br><br><br><br>
-
     <div class="welcomepage">
     <div class="welcome">
         Welcome to Streamixx
     </div>
-    <div class="image">
+    <div class="image1">
     </div>
+    <div class="image2">
+    </div>
+    </div>
+    
 </body>
 </html>
