--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
 
     <div class="welcomepage">
     <div class="welcome">
-        Welcome to Streamixx
+        Welcome To Streamixx
     </div>
     <div class="image1">
     </div>
     <div class="image2">
+    </div>
+    <div class="image3">
+    </div>
+    <div class="image4">
     </div>
     </div>
     
