--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </div>
     <div class="top">
     <div class="navbar">
-        <div class="home">Home</div>
-        <div class="about">About</div>
-        <div class="contact">Contact</div>
+        <div class="home"><a href="#">Home</a></div>
+        <div class="about"><a href="#">About</a></div>
+        <div class="contact"><a href="#x">Contact</a></div>
     </div>
     </div>
     </div>
