--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </div>
     <div class="top">
     <div class="navbar">
-        <div class="home"><a href="#">Home</a></div>
-        <div class="about"><a href="#">About</a></div>
+        <div class="home"><a href="#a">Home</a></div>
+        <div class="about"><a href="#abse">About</a></div>
         <div class="contact"><a href="#x">Contact</a></div>
     </div>
     </div>
@@ -42,6 +42,48 @@
     </div>
     <div class="image4">
     </div>
+    </div>
+
+    <div class="welcomemessage">
+        The World of Cinema and Entertainment
+    </div>
+
+    <br><br><br>
+
+    <div class="aboutsection" id="abse">
+        <div class="aboutline">
+            About Us
+        </div>
+        <div class="aboutuscontainer">
+        <div class="imagecontainer">
+            <div class="harshitsingla"></div>
+            <div class="harshitabansal"></div>
+            <div class="harshpreetsingh"></div>
+        </div>
+        <div class="nameaboutcontainer">
+            <div class="harshits">Harshit Singla
+            <div class="iconstore1">
+            <a><div class="instac"></div></a>
+            <a href="https://www.linkedin.com/in/harshit-singla-05b782244/" title="linkedin" target="_blank"><div class="linkedinc"></div></a>
+        </div></div>
+            <div class="harshitab">Harshita Bansal
+            <div class="iconstore2">
+            <a><div class="instac"></div></a>
+            <a><div class="linkedinc"></div></a>
+        </div>
+            </div>
+            <div class="harshpreets">Harshpreet Singh
+            <div class="iconstore3">
+            <a><div class="instac"></div></a>
+            </a><div class="linkedinc"></div></a>
+        </div>
+            </div>
+        </div>
+        </div>
+
+        <div class="learnmore">
+            Learn More
+        </div>
     </div>
     
 </body>
