--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="harshpreets">Harshpreet Singh
             <div class="iconstore3">
             <a><div class="instac"></div></a>
-            </a><div class="linkedinc"></div></a>
+            <a href="https://www.linkedin.com/in/harshpreetsingh931/"><div class="linkedinc"></div></a>
         </div>
             </div>
         </div>
