--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </div>
     <div class="top">
     <div class="navbar">
-        <div class="home"><a href="#a">Home</a></div>
+        <div class="home"><a href="#">Home</a></div>
         <div class="about"><a href="#abse">About</a></div>
-        <div class="contact"><a href="#x">Contact</a></div>
+        <div class="contact"><a href="#contactus">Contact</a></div>
     </div>
     </div>
     </div>
@@ -81,6 +81,20 @@
         </div>
     </div>
     </div>
+
+    <br><br><br>
+
+    <div class="contactuspage" id="contactus">
+
+        <div class="contactname">
+            Contact Us
+        </div>
+        <div class="contactuscontainer">
+            
+        </div>
+    </div>
+
+    <div class="topicon">GO TO TOP</div>
     
 </body>
 </html>
