--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="harshitab">Harshita Bansal
             <div class="iconstore2">
             <a><div class="instac"></div></a>
-            <a><div class="linkedinc"></div></a>
+            <a href="https://www.linkedin.com/in/harshita-bansal-704479274/"><div class="linkedinc"></div></a>
         </div>
             </div>
             <div class="harshpreets">Harshpreet Singh
