--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div class="welcome">
         Welcome To Streamixx
     </div>
+    <div class="allimage">
     <div class="image1">
     </div>
     <div class="image2">
@@ -41,6 +42,7 @@
     <div class="image3">
     </div>
     <div class="image4">
+    </div>
     </div>
     </div>
 
