--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
         <div class="nameaboutcontainer">
             <div class="harshits">Harshit Singla
             <div class="iconstore1">
-            <a><div class="instac"></div></a>
+            <a href="https://www.instagram.com/harshit_singla1761/"><div class="instac"></div></a>
             <a href="https://www.linkedin.com/in/harshit-singla-05b782244/" title="linkedin" target="_blank"><div class="linkedinc"></div></a>
         </div></div>
             <div class="harshitab">Harshita Bansal
             <div class="iconstore2">
-            <a><div class="instac"></div></a>
+            <a href="https://www.instagram.com/harshitabansal_26/"><div class="instac"></div></a>
             <a href="https://www.linkedin.com/in/harshita-bansal-704479274/"><div class="linkedinc"></div></a>
         </div>
             </div>
             <div class="harshpreets">Harshpreet Singh
             <div class="iconstore3">
-            <a><div class="instac"></div></a>
+            <a href="https://www.instagram.com/harshpreet0402/"><div class="instac"></div></a>
             <a href="https://www.linkedin.com/in/harshpreetsingh931/"><div class="linkedinc"></div></a>
         </div>
             </div>
