--- a/index.html
+++ b/index.html
@@ -57,18 +57,13 @@
             About Us
         </div>
         <div class="aboutuscontainer">
-        <div class="imagecontainer">
-            <div class="harshitsingla"></div>
-            <div class="harshitabansal"></div>
-            <div class="harshpreetsingh"></div>
-        </div>
         <div class="nameaboutcontainer">
-            <div class="harshits">Harshit Singla
+            <div class="harshits"><div class="harshitsingla"></div>Harshit Singla
             <div class="iconstore1">
             <a href="https://www.instagram.com/harshit_singla1761/"><div class="instac"></div></a>
             <a href="https://www.linkedin.com/in/harshit-singla-05b782244/" title="linkedin" target="_blank"><div class="linkedinc"></div></a>
         </div></div>
-            <div class="harshitab">Harshita Bansal
+            <div class="harshitab"><div class="harshitabansal"></div>Harshita Bansal
             <div class="iconstore2">
             <a href="https://www.instagram.com/harshitabansal_26/"><div class="instac"></div></a>
             <a href="https://www.linkedin.com/in/harshita-bansal-704479274/"><div class="linkedinc"></div></a>
@@ -76,7 +71,7 @@
             </div>
             <div class="harshpreets">Harshpreet Singh
             <div class="iconstore3">
-            <a href="https://www.instagram.com/harshpreet0402/"><div class="instac"></div></a>
+            <a href="https://www.instagram.com/harshpreet0402/"><div class="harshpreetsingh"></div><div class="instac"></div></a>
             <a href="https://www.linkedin.com/in/harshpreetsingh931/"><div class="linkedinc"></div></a>
         </div>
             </div>
