--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a href="https://www.linkedin.com/in/harshita-bansal-704479274/"><div class="linkedinc"></div></a>
         </div>
             </div>
-            <div class="harshpreets">Harshpreet Singh
+            <div class="harshpreets"><div class="harshpreetsingh"></div>Harshpreet Singh
             <div class="iconstore3">
             <a href="https://www.instagram.com/harshpreet0402/"><div class="harshpreetsingh"></div><div class="instac"></div></a>
             <a href="https://www.linkedin.com/in/harshpreetsingh931/"><div class="linkedinc"></div></a>
