about section done

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="harshpreets"><div class="harshpreetsingh"></div>Harshpreet Singh
             <div class="iconstore3">
-            <a href="https://www.instagram.com/harshpreet0402/"><div class="harshpreetsingh"></div><div class="instac"></div></a>
+            <a href="https://www.instagram.com/harshpreet0402/"><div class="instac"></div></a>
             <a href="https://www.linkedin.com/in/harshpreetsingh931/"><div class="linkedinc"></div></a>
         </div>
             </div>
