--- a/index.html
+++ b/index.html
@@ -87,8 +87,38 @@
             Contact Us
         </div>
         <div class="contactuscontainer">
-            
+            <form class="feedbackform">
+
+                <div class="name">
+                <div class="first-name">
+                <label for="fn" class="formitem">First Name</label>
+                <input id="fn" name="First-name" class="inputbox" required></div>
+
+                <div class="last-name">
+                <label for="ln" class="formitem">Last Name</label>
+                <input id="ln" name="Last-Name" class="inputbox" required></div>
+                </div>
+
+                <div class="email-class">
+                    <label for="em" class="formitem">Email</label>
+                    <input id="em" name="Email" class="inputbox" type="email" required>
+                </div>
+
+                <div class="message">
+                    <label for="mes" class="formitem">Feedback</label>
+                     <textarea id="mes"></textarea>
+                </div>
+
+
+                <input type="submit" class="submit-button">
+                <input type="reset" class="submit-button">
+            </form>
+
+            <div class="feedimage"></div>
         </div>
+
+        
+
     </div>
 
     <a href="#"><div class="topicon"></div></a>
