--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ video.addEventListener('mouseout', () => {
                 </div>
 
                 <div class="email-class">
-                    <label for="em" class="formitem">Email</label>
-                    <input id="em" name="Email" class="inputbox" type="email" required>
+                    <label for="emss" class="formitem">Email</label>
+                    <input id="emss" name="Email" class="inputbox" type="email" required>
                 </div>
 
                 <div class="message">
@@ -133,9 +133,10 @@ video.addEventListener('mouseout', () => {
                      <textarea id="mes"></textarea>
                 </div>
 
-
+                <div>
                 <input type="submit" class="submit-button">
                 <input type="reset" class="submit-button">
+                </div>
             </form>
 
             <div class="feedimage"></div>
