--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ video.addEventListener('mouseout', () => {
                 </div>
 
                 <div class="message">
-                    <label for="mes" class="formitem">Feedback</label>
-                     <textarea id="mes"></textarea>
+                    <label for="mesa" class="formitem">Feedback</label>
+                     <textarea id="mesa" class="inputbox"></textarea>
                 </div>
 
                 <div>
