--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ video.addEventListener('mouseout', () => {
                 </div>
 
                 <div class="email-class">
-                    <label for="emss" class="formitem">Email</label>
-                    <input id="emss" name="Email" class="inputbox" type="email" required>
+                    <label for="mailclas" class="formitem">Email</label>
+                    <input class="inputbox" id="mailclas" name="Email" type="email" required>
                 </div>
 
                 <div class="message">
