--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <video id="my-video1" src="./1vi.mp4" muted></video>
             <div class="genre-content">
                 <h1>ACTION</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum architecto officia excepturi doloremque quibusdam debitis repudiandae et cumque? Sapiente commodi facilis voluptatibus quisquam officiis, necessitatibus, temporibus ut deserunt alias est eum repudiandae? Veritatis sequi delectus architecto illo quaerat, autem repellat temporibus commodi labore incidunt explicabo tempore, iure optio voluptatum totam.</p>
+                <p>A genre featuring high-energy, physical stunts and fast-paced sequences. These films often involve a hero or protagonist fighting against a villain or antagonist, and can include elements of adventure, espionage, or martial arts. Action films can be highly entertaining and thrilling, with a focus on adrenaline-fueled excitement and spectacle.</p>
             </div>
         </div>
 
@@ -65,8 +65,8 @@
 
         <div class="action-genre">
             <div class="genre-content">
-                <h1>ACTION</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum architecto officia excepturi doloremque quibusdam debitis repudiandae et cumque? Sapiente commodi facilis voluptatibus quisquam officiis, necessitatibus, temporibus ut deserunt alias est eum repudiandae? Veritatis sequi delectus architecto illo quaerat, autem repellat temporibus commodi labore incidunt explicabo tempore, iure optio voluptatum totam.</p>
+                <h1>DOCUMENTRY</h1>
+                <p>Non-fiction films that explore real-life events, people, or topics. Documentaries can be educational, informative, and sometimes controversial, often using interviews, footage, and other media to present a factual account of a subject. The genre can encompass a wide range of topics, from history and science to politics and the environment.</p>
             </div>
             <video id="my-video2" src="./1vi.mp4" muted></video>
         </div>
@@ -76,8 +76,8 @@
         <div class="action-genre">
             <video id="my-video3" src="./1vi.mp4" muted></video>
             <div class="genre-content">
-                <h1>ACTION</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum architecto officia excepturi doloremque quibusdam debitis repudiandae et cumque? Sapiente commodi facilis voluptatibus quisquam officiis, necessitatibus, temporibus ut deserunt alias est eum repudiandae? Veritatis sequi delectus architecto illo quaerat, autem repellat temporibus commodi labore incidunt explicabo tempore, iure optio voluptatum totam.</p>
+                <h1>DRAMA</h1>
+                <p>A genre that explores human emotions and relationships, often with intense and serious themes. These films can include elements of tragedy, romance, and social commentary, and can range from realistic to melodramatic in tone. Drama films can be powerful and moving, with a focus on character development and emotional depth.</p>
             </div>
         </div>
 
@@ -85,8 +85,8 @@
 
         <div class="action-genre">
             <div class="genre-content">
-                <h1>ACTION</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum architecto officia excepturi doloremque quibusdam debitis repudiandae et cumque? Sapiente commodi facilis voluptatibus quisquam officiis, necessitatibus, temporibus ut deserunt alias est eum repudiandae? Veritatis sequi delectus architecto illo quaerat, autem repellat temporibus commodi labore incidunt explicabo tempore, iure optio voluptatum totam.</p>
+                <h1>HORROR</h1>
+                <p>A genre featuring high-energy, physical stunts and fast-paced sequences. These films often involve a hero or protagonist fighting against a villain or antagonist, and can include elements of adventure, espionage, or martial arts.</p>
             </div>
             <video id="my-video4" src="./1vi.mp4" muted></video>
         </div>
@@ -96,8 +96,8 @@
         <div class="action-genre">
             <video id="my-video5" src="./1vi.mp4" muted></video>
             <div class="genre-content">
-                <h1>ACTION</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum architecto officia excepturi doloremque quibusdam debitis repudiandae et cumque? Sapiente commodi facilis voluptatibus quisquam officiis, necessitatibus, temporibus ut deserunt alias est eum repudiandae? Veritatis sequi delectus architecto illo quaerat, autem repellat temporibus commodi labore incidunt explicabo tempore, iure optio voluptatum totam.</p>
+                <h1>PSYCHOLOGICAL</h1>
+                A genre that focuses on the inner workings of the human mind and often deals with mental health issues. These films can explore themes such as perception, memory, identity, and consciousness, and often feature complex characters and narratives. Psychological films can be thought-provoking and intellectually stimulating, with a focus on exploring the depths of the human psyche.
             </div>
         </div>
 
@@ -105,8 +105,8 @@
 
         <div class="action-genre">
             <div class="genre-content">
-                <h1>ACTION</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum architecto officia excepturi doloremque quibusdam debitis repudiandae et cumque? Sapiente commodi facilis voluptatibus quisquam officiis, necessitatibus, temporibus ut deserunt alias est eum repudiandae? Veritatis sequi delectus architecto illo quaerat, autem repellat temporibus commodi labore incidunt explicabo tempore, iure optio voluptatum totam.</p>
+                <h1>ROMANCE</h1>
+                A genre that focuses on romantic relationships and the emotions that come with them, often featuring themes of love and heartbreak. These films can range from light-hearted comedies to intense dramas, and can include elements of music, dance, or other forms of expression. Romance films can be highly emotive and romantic, with a focus on exploring the complexities of love and relationships.
             </div>
             <video id="my-video6" src="./1vi.mp4" muted></video>
         </div>
@@ -116,8 +116,8 @@
         <div class="action-genre">
             <video id="my-video7" src="./1vi.mp4" muted></video>
             <div class="genre-content">
-                <h1>ACTION</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum architecto officia excepturi doloremque quibusdam debitis repudiandae et cumque? Sapiente commodi facilis voluptatibus quisquam officiis, necessitatibus, temporibus ut deserunt alias est eum repudiandae? Veritatis sequi delectus architecto illo quaerat, autem repellat temporibus commodi labore incidunt explicabo tempore, iure optio voluptatum totam.</p>
+                <h1>SCI-FI</h1>
+                <p>A genre that explores scientific and technological advancements, often set in futuristic or otherworldly settings. These films can include elements of adventure, action, or horror, and often explore themes such as artificial intelligence, time travel, and extraterrestrial life. Sci-fi films can be highly imaginative and visionary, with a focus on exploring the possibilities of human ingenuity and innovation.</p>
             </div>
         </div>
 
@@ -125,8 +125,8 @@
 
         <div class="action-genre">
             <div class="genre-content">
-                <h1>ACTION</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum architecto officia excepturi doloremque quibusdam debitis repudiandae et cumque? Sapiente commodi facilis voluptatibus quisquam officiis, necessitatibus, temporibus ut deserunt alias est eum repudiandae? Veritatis sequi delectus architecto illo quaerat, autem repellat temporibus commodi labore incidunt explicabo tempore, iure optio voluptatum totam.</p>
+                <h1>THRILLER</h1>
+                <p>A genre that keeps audiences on the edge of their seats, typically involving suspenseful plot twists and danger. These films often involve a hero or protagonist trying to outsmart a villain or antagonist, and can include elements of mystery, espionage, or action. Thriller films can be highly engaging and gripping, with a focus on tension and suspense.</p>
             </div>
             <video id="my-video8" src="./1vi.mp4" muted></video>
         </div>
