resposiveness added fully

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <br><br>
 
-        <div class="action-genre">
+        <div class="action-genre1">
             <div class="genre-content">
                 <h1>DOCUMENTRY</h1>
                 <p>Non-fiction films that explore real-life events, people, or topics. Documentaries can be educational, informative, and sometimes controversial, often using interviews, footage, and other media to present a factual account of a subject. The genre can encompass a wide range of topics, from history and science to politics and the environment.</p>
@@ -83,7 +83,7 @@
 
         <br><br>
 
-        <div class="action-genre">
+        <div class="action-genre1">
             <div class="genre-content">
                 <h1>HORROR</h1>
                 <p>A genre featuring high-energy, physical stunts and fast-paced sequences. These films often involve a hero or protagonist fighting against a villain or antagonist, and can include elements of adventure, espionage, or martial arts.</p>
@@ -103,7 +103,7 @@
 
         <br><br>
 
-        <div class="action-genre">
+        <div class="action-genre1">
             <div class="genre-content">
                 <h1>ROMANCE</h1>
                 A genre that focuses on romantic relationships and the emotions that come with them, often featuring themes of love and heartbreak. These films can range from light-hearted comedies to intense dramas, and can include elements of music, dance, or other forms of expression. Romance films can be highly emotive and romantic, with a focus on exploring the complexities of love and relationships.
@@ -123,7 +123,7 @@
 
         <br><br>
 
-        <div class="action-genre">
+        <div class="action-genre1">
             <div class="genre-content">
                 <h1>THRILLER</h1>
                 <p>A genre that keeps audiences on the edge of their seats, typically involving suspenseful plot twists and danger. These films often involve a hero or protagonist trying to outsmart a villain or antagonist, and can include elements of mystery, espionage, or action. Thriller films can be highly engaging and gripping, with a focus on tension and suspense.</p>
