textarea to inputbox

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
                 <div class="message">
                     <label for="mesa" class="formitem">Feedback</label>
-                     <textarea id="mesa" class="inputbox"></textarea>
+                     <input id="mesa" class="inputbox">
                 </div>
 
                 <div>
