--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <h1>THRILLER</h1>
                 <p>A genre that keeps audiences on the edge of their seats, typically involving suspenseful plot twists and danger. These films often involve a hero or protagonist trying to outsmart a villain or antagonist, and can include elements of mystery, espionage, or action. Thriller films can be highly engaging and gripping, with a focus on tension and suspense.</p>
             </div>
-            <video id="my-video8" src="./1vi.mp4" muted></video>
+            <video id="my-video8" src="./1vi.mp4" muted loop></video>
         </div>
     </div>
 
