--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="logo">
     <a href="#" class="logosite">
     <img src="LogoStreamMixx.png" alt="sitelogo" class="logosite">
-    <div class="streamixx">Streamixx</div>
-    </a>
+    <div class="streamixx">Streamixx</div></a>
+    
     </div>
     <div class="top">
     <div class="navbar">
