--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="topbar">
     <div class="logo">
     <a href="#" class="logosite">
-    <img src="LogoStreamMixx.png" alt="sitelogo" class="logosite">
+    <img src="./Data/logo/LogoStreamMixx.png" alt="sitelogo" class="logosite">
     <div class="streamixx">Streamixx</div></a>
     
     </div>
@@ -54,7 +54,7 @@
 
     <div class="genres">
         <div class="action-genre">
-            <video id="my-video1" src="./vid1.mp4" muted loop></video>
+            <video id="my-video1" src="./Data/genvid/vid1.mp4" muted loop></video>
             <div class="genre-content">
                 <h1>ACTION</h1>
                 <p>A genre featuring high-energy, physical stunts and fast-paced sequences. These films often involve a hero or protagonist fighting against a villain or antagonist, and can include elements of adventure, espionage, or martial arts. Action films can be highly entertaining and thrilling, with a focus on adrenaline-fueled excitement and spectacle.</p>
