Adding Random Button

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
         The World of Cinema and Entertainment
     </div>
 
+    <div class="buttons"><a href="randompick.html"><button id="rdnpick" type="button"><span>Pick a Random Movie</span></button></a></div>
+
     <br><br><br>
 
     <div class="genres">
