--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         The World of Cinema and Entertainment
     </div>
 
-    <div class="buttons"><a href="randompick.html"><button id="rdnpick" type="button"><span>Pick a Random Movie</span></button></a></div>
+    <div class="buttons"><a href="randompick.html" target="_blank"><button id="rdnpick" type="button"><span>Pick a Random Movie</span></button></a></div>
 
     <br><br><br>
 
