--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             Contact Us
         </div>
         <div class="contactuscontainer">
-            <form class="feedbackform" method="post" action="send_email.php">
+            <form class="feedbackform">
 
                 <div class="name">
                 <div class="first-name">
