script file arranged

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <script src="./Data/videoscript/script.js"></script>
 </head>
 <body>
 
@@ -133,9 +134,6 @@
             <video id="my-video8" src="./Data/genvid/ThrGEN.mp4" muted loop></video>
         </div>
     </div>
-
-
-    <script src="script.js"></script>
 
     <br><br><br>
 
