--- a/index.html
+++ b/index.html
@@ -50,8 +50,15 @@
     <div class="welcomemessage">
         The World of Cinema and Entertainment
     </div>
-
-    <div class="buttons"><a href="randompick.html" target="_blank"><button id="rdnpick" type="button"><span>Pick a Random Movie</span></button></a></div>
+    <div class="cont">
+    <div class="buttons" id="dropdown"><a href="randompick.html" target="_blank"><button id="rdnpickx" type="button"><span>Pick a Random Movie</span></button></a>
+    <div id="dropdown-content">
+        <a href="randompick.html" target="_blank"><button class="umm" id="rdnpick" type="button"><span>Pick ANY Random Movie</span></button></a>
+        <a href="randompick.html" target="_blank"><button class="umm" id="rdnpick" type="button"><span>Pick an INTERNATIONAL Random Movie</span></button></a>
+        <a href="randompick.html" target="_blank"><button class="umm" id="rdnpick" type="button"><span>Pick an INDIAN Random Movie</span></button></a>
+    </div>
+    </div>
+    </div>
 
     <br><br><br>
 
