--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
         <div class="action-genre1">
             <div class="genre-content">
-                <h1>DOCUMENTRY</h1>
-                <p>Non-fiction films that explore real-life events, people, or topics. Documentaries can be educational, informative, and sometimes controversial, often using interviews, footage, and other media to present a factual account of a subject. The genre can encompass a wide range of topics, from history and science to politics and the environment.</p>
+                <h1>COMEDY</h1>
+                <p>A genre that aims to entertain and provoke laughter through humorous situations, witty dialogue, and comedic performances. Comedy films can range from slapstick and farce to satire and dark humor, providing a lighthearted escape and often offering social commentary.   </p>
             </div>
             <video id="my-video2" src="./Data/genvid/DocuGEN.mp4" muted loop></video>
         </div>
