Psychological to Crime Genre

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
         <div class="action-genre">
             <video id="my-video5" src="./Data/genvid/PsyGEN.mp4" muted loop></video>
             <div class="genre-content">
-                <h1>PSYCHOLOGICAL</h1>
-                A genre that focuses on the inner workings of the human mind and often deals with mental health issues. These films can explore themes such as perception, memory, identity, and consciousness, and often feature complex characters and narratives. Psychological films can be thought-provoking and intellectually stimulating, with a focus on exploring the depths of the human psyche.
+                <h1>CRIME</h1>
+                A genre that revolves around criminal activities, investigations, and the pursuit of justice. Crime films often explore themes of morality, corruption, and the complexities of the human psyche. They can include elements of suspense, action, and thriller, providing a gritty and realistic depiction of criminal underworlds, heists, detectives, and the blurred lines between law and order. These films captivate audiences with intricate plots, charismatic antiheroes, and a glimpse into the darker side of society.
             </div>
         </div>
 
