--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h1>COMEDY</h1>
                 <p>A genre that aims to entertain and provoke laughter through humorous situations, witty dialogue, and comedic performances. Comedy films can range from slapstick and farce to satire and dark humor, providing a lighthearted escape and often offering social commentary.   </p>
             </div>
-            <video id="my-video2" src="./Data/genvid/DocuGEN.mp4" muted loop></video>
+            <video id="my-video2" src="./Data/genvid/ComGEN.mp4" muted loop></video>
         </div>
 
         <br><br>
