some little changes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         The World of Cinema and Entertainment
     </div>
     <div class="cont">
-    <div class="buttons" id="dropdown"><a href="randompick.html" target="_blank"><button id="rdnpickx" type="button"><span>Pick a Random Movie</span></button></a>
+    <div class="buttons" id="dropdown"><button id="rdnpickx" type="button"><span>Pick a Random Movie</span></button>
     <div id="dropdown-content">
         <a href="randompick.html" target="_blank"><button class="umm" id="rdnpick" type="button"><span>Pick ANY Random Movie</span></button></a>
         <a href="randompick.html" target="_blank"><button class="umm" id="rdnpick" type="button"><span>Pick an INTERNATIONAL Random Movie</span></button></a>
@@ -212,6 +212,8 @@
     </div>
 
     <a href="#"><div class="topicon"></div></a>
+
+    <script defer src="./Data/filmdata/script2.js"></script>
     
 </body>
 </html>
