--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
         The World of Cinema and Entertainment
     </div>
     <div class="cont">
-    <div class="buttons" id="dropdown"><button id="rdnpickx" type="button"><span>Pick a Random Movie</span></button>
+    <div class="buttons" id="dropdown"><button id="rdnpickx" type="button"><span>Pick a Movie</span></button>
     <div id="dropdown-content">
-        <a href="randompick.html" target="_blank"><button class="umm" id="rdnpick" type="button"><span>Pick ANY Random Movie</span></button></a>
-        <a href="randompick.html" target="_blank"><button class="umm" id="rdnpick" type="button"><span>Pick an INTERNATIONAL Random Movie</span></button></a>
-        <a href="randompick.html" target="_blank"><button class="umm" id="rdnpick" type="button"><span>Pick an INDIAN Random Movie</span></button></a>
+        <a href="randompick.html" target="_blank"><button class="umm" id="rdnpick" type="button"><span>Pick any Random Movie</span></button></a>
+        <a href="randomgenre.html" target="_blank"><button class="umm" id="rdnpick" type="button"><span>Pick a Random Genre</span></button></a>
     </div>
     </div>
     </div>
